Item group overflow issues in Firefox only
fixes CNVS-20550

Test plan:

Following is a list of the bugs and their
fixes.

Legacy Canvas UI

Conversations broken:
http://screencast.com/t/Vebv9wASw
Conversations fixed:
http://screencast.com/t/M5c3diO8v

New Canvas UI (turn on New Styles
feature flag)

Announcements broken:
http://screencast.com/t/EFwNLN7h5LH
Announcements fixed:
http://screencast.com/t/0fu7pTDmx

Assignments broken:
http://screencast.com/t/LJ4JTxesyYx0
Assignments fixed:
http://screencast.com/t/3E4Ndjt3VA

Conferences broken:
http://screencast.com/t/wL1Y9Lp6
Conferences fixed:
http://screencast.com/t/XojSXK7aZoS

Reviewed-on: https://gerrit.instructure.com/54410
Product-Review: Colleen Palmer <colleen@instructure.com>
Tested-by: Jenkins
QA-Review: Steven Shepherd <sshepherd@instructure.com>

--- a/app/stylesheets/bundles/conferences.scss
+++ b/app/stylesheets/bundles/conferences.scss
@@ -55,7 +55,10 @@ header:not(.ic-app-header) {
 }
 
 .ig-list .ig-row .ellipses {
-  color: #737373;
+  color: $ic-font-color--subdued;
+  // Fix for strange Firefox-only bug where white-space: no-wrap was blowing out the layout
+  // on conferences index page
+  body.ff & { @include firefox-white-space-bug-fix; }
 }
 
 #add_conference_form {
@@ -83,4 +86,8 @@ header:not(.ic-app-header) {
   flex: 0 0 200px;
   @include breakpoint(desktop) { flex: 0 0 34%; }
   @include breakpoint(wide) { flex: 0 0 40%; }
+}
+
+.ig-details {
+  flex: 1;
 }
